runtime/pavex_macros/tests/constructor/fail/multiple_cloning_strategies.stderr
error: A constructor can't have multiple cloning strategies. You can only specify *one* of `never_clone` and `clone_if_necessary`.
 --> tests/constructor/fail/multiple_cloning_strategies.rs:5:1
  |
5 | #[singleton(clone_if_necessary, never_clone)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `singleton` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A constructor can't have multiple cloning strategies. You can only specify *one* of `never_clone` and `clone_if_necessary`.
  --> tests/constructor/fail/multiple_cloning_strategies.rs:10:1
   |
10 | #[request_scoped(clone_if_necessary, never_clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `request_scoped` (in Nightly builds, run with -Z macro-backtrace for more info)

error: A constructor can't have multiple cloning strategies. You can only specify *one* of `never_clone` and `clone_if_necessary`.
  --> tests/constructor/fail/multiple_cloning_strategies.rs:15:1
   |
15 | #[transient(clone_if_necessary, never_clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `transient` (in Nightly builds, run with -Z macro-backtrace for more info)
